# directory-service-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
conf/: Config.yaml.template
directory_service/: directory_service.py  logger.py  main.py
test/: test_directory_service.py
